# git-standup-bot

./: .gitignore  .standup.example.toml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RELEASE_CHECKLIST.md
src/standup/: __init__.py  agent.py  ai_summarizer.py  cli.py  config.py  encoding_helper.py  formatter.py  git_parser.py  grouper.py  standup_agent.py  timezone_helper.py
tests/: test_encoding.py  test_formatter.py  test_git_parser.py  test_git_parser_multi.py  test_grouper.py  test_standup_agent.py  test_timezone.py
