[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-standup-bot"
version = "1.0.0"
description = "AI-powered CLI tool that generates daily standup reports from your git activity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["git", "standup", "cli", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
standup = "standup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/standup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
